<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:gravity="center_vertical"
    android:orientation="vertical"
   >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:gravity="center"
                        android:text="@string/register"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:textColor="#E1FFFFFF"
                        android:layout_height="wrap_content"
                        android:text="username-:"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/etUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@android:color/white"
                        android:hint="@string/username"
                        android:inputType="textPersonName"
                        android:padding="10dp" />

                    <TextView
                        android:id="@+id/textView8"
                        android:textColor="#E1FFFFFF"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@android:color/white"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="10dp" />

                    <TextView
                        android:id="@+id/textView10"
                        android:textColor="#E1FFFFFF"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/confirm_password"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/etConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@android:color/white"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:padding="10dp" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/full_name"
                        android:textColor="#E1FFFFFF"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/etFullName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@android:color/white"
                        android:hint="@string/full_name"

                        android:inputType="textPersonName"
                        android:padding="10dp" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#E1FFFFFF"

                        android:text="Email-:"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/Email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@android:color/white"
                        android:hint="Email-:"
                        android:inputType="textEmailAddress"
                        android:padding="10dp" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Mobile No-:"
                        android:textColor="#E1FFFFFF"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/MobailNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@android:color/white"
                        android:hint="Mobile No"
                        android:inputType="number"
                        android:padding="10dp" />

                    <TextView
                        android:id="@+id/textView15"
                        android:textColor="#E1FFFFFF"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Date of Brith-:"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/DOB"
                            android:layout_width="302dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:background="@android:color/white"
                            android:hint="DOB"
                            android:inputType="date|number"
                            android:padding="10dp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Enrollment No-:"
                        android:textColor="#E1FFFFFF"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/Enrollment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@android:color/white"
                        android:hint="Enrollment No-"
                        android:inputType="number"
                        android:padding="10dp" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Roll No-:"
                        android:textColor="#E1FFFFFF"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/RollNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@android:color/white"
                        android:hint="Roll No."
                        android:inputType="number"
                        android:padding="10dp" />

                    <TextView
                        android:id="@+id/text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Select Branch-:"
                        android:textSize="18sp"
                        android:textColor="#E1FFFFFF" />

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:background="@android:color/white"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Select Year-:"
                        android:textColor="#E1FFFFFF"
                        android:textSize="18sp" />
                    <Spinner
                        android:id="@+id/spinner_Year"
                        android:layout_width="match_parent"
                        android:background="@android:color/white"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/btnRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="#f05924"
                        android:text="@string/register"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:text="@string/already_having_account"
                        android:textColor="#ccc" />

                    <Button
                        android:id="@+id/btnRegisterLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="#9090EC"
                        android:text="@string/log_in"
                        android:textColor="@android:color/white" />

                    <EditText
                        android:id="@+id/editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="date" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
